modify home page

--- a/templates/frontend/pages/home.html.twig
+++ b/templates/frontend/pages/home.html.twig
@@ -42,22 +42,22 @@ Bảng tin
           <div class="carousel-item active" data-interval="5000">
             <img src="/babyshop/img/bg-showcase-2.jpg" class="d-block w-100" style="height: 300px; object-fit: cover;" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              <h5>Laptop Asus S510</h5>
+              <p>Mỏng nhẹ, giá tốt</p>
             </div>
           </div>
           <div class="carousel-item" data-interval="5000">
-            <img src="/babyshop/img/bg-masthead.jpg" class="d-block w-100" style="height: 300px; object-fit: cover;" alt="...">
+            <img src="/babyshop/img/bg-showcase-1.jpg" class="d-block w-100" style="height: 300px; object-fit: cover;" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h5>Iphone 7plus</h5>
+              <p>Sản phẩm đáng mua</p>
             </div>
           </div>
           <div class="carousel-item" data-interval="5000">
             <img src="/babyshop/img/bg-showcase-3.jpg" class="d-block w-100" style="height: 300px; object-fit: cover;" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5></h5>
+              <p></p>
             </div>
           </div>
         </div>
@@ -83,22 +83,22 @@ Bảng tin
       
               <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('/babyshop/img/bg-showcase-1.jpg');"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                <h2>Mobile</h2>
-                <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+                <h2>Sau tất cả, 7 Plus là chiếc iPhone đáng mua nhất!</h2>
+                <p class="lead mb-0">iPhone 7 Plus có tất cả: camera kép, màn hình 5,5 inch, chống nước, viên pin khá giống 8 Plus. Ngoại trừ sạc không dây, bộ xử lý chậm hơn, 7 Plus gần như là một phiên bản 8 Plus rẻ hơn 130 USD.</p>
               </div>
             </div>
             <div class="row no-gutters">
               <div class="col-lg-6 text-white showcase-img" style="background-image: url('/babyshop/img/bg-showcase-2.jpg');"></div>
               <div class="col-lg-6 my-auto showcase-text">
-                <h2>PC & Laptop</h2>
-                <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+                <h2>Asus VivoBook S510 viền thật mỏng, nhìn thật đã</h2>
+                <p class="lead mb-0">ASUS VivoBook S15 là sự kết hợp hoàn hảo giữa vẻ đẹp và hiệu năng. Với viền máy NanoEdge mỏng, lớp hoàn tất bằng kim loại, bộ vi xử lý Intel® Core™ i7 mới nhất với 16GB RAM, đồ họa NVIDIA® GeForce® 940MX*, VivoBook S15 được thiết kế cho cuộc sống đô thị tấp nập ngày nay.</p>
               </div>
             </div>
             <div class="row no-gutters">
               <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('/babyshop/img/bg-showcase-3.jpg');"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                <h2>Others</h2>
-                <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+                <h2>Máy tính bảng Samsung Galaxy Tab A plus 8" SPen (2019)</h2>
+                <p class="lead mb-0">Samsung Galaxy Tab A Plus 8.0 inch (2019) là một chiếc máy tính bảng có thiết kế đẹp, trọng lượng nhẹ giúp bạn có thể dễ dàng mang theo trong những buổi sáng cafe hay những chuyến đi chơi xa!</p>
               </div>
             </div>
           </div>
@@ -107,27 +107,27 @@ Bảng tin
               <!-- Testimonials -->
               <section class="testimonials text-center bg-light">
                 <div class="container">
-                  <h2 class="mb-5">What people are saying...</h2>
+                  <h2 class="mb-5">Ý kiến từ khách hàng...</h2>
                   <div class="row">
                     <div class="col-lg-4">
                       <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                         <img class="img-fluid rounded-circle mb-3" src="/babyshop/img/testimonials-1.jpg" alt="">
-                        <h5>Margaret E.</h5>
-                        <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+                        <h5>Ms Thu</h5>
+                        <p class="font-weight-light mb-0">"Samsung Spen thật tuyệt! Cám ơn Babyshop!"</p>
                       </div>
                     </div>
                     <div class="col-lg-4">
                       <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                         <img class="img-fluid rounded-circle mb-3" src="/babyshop/img/testimonials-2.jpg" alt="">
                         <h5>Fred S.</h5>
-                        <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+                        <p class="font-weight-light mb-0">"Laptop Asus S510 is good for me!"</p>
                       </div>
                     </div>
                     <div class="col-lg-4">
                       <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                         <img class="img-fluid rounded-circle mb-3" src="/babyshop/img/testimonials-3.jpg" alt="">
                         <h5>Sarah W.</h5>
-                        <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+                        <p class="font-weight-light mb-0">"Thật vừa ý với iphone mua từ Babyshop!"</p>
                       </div>
                     </div>
                   </div>
