modify font family homepage

--- a/templates/frontend/pages/home.html.twig
+++ b/templates/frontend/pages/home.html.twig
@@ -19,17 +19,20 @@ Bảng tin
 
     <!-- Slider -->
     <style media="screen">
-        #menubar{
-          margin: 0px;
-          padding: 0px;
-        }
-        #carousel-example-generic{
-          margin: 0px;
-          padding: 0px;
-          height: 100x;
-          background: green;
-        }
-      </style>
+      *{
+        font-family: 'Times New Roman', Times, serif;
+      }
+      #menubar{
+        margin: 0px;
+        padding: 0px;
+      }
+      #carousel-example-generic{
+        margin: 0px;
+        padding: 0px;
+        height: 100x;
+        background: green;
+      }
+    </style>
     
     <div class="av" style="margin-top: 64px; margin-bottom: 5px; height: 300px;">
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
