--- a/templates/frontend/layouts/layout.html.twig
+++ b/templates/frontend/layouts/layout.html.twig
@@ -35,7 +35,7 @@
 
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-          <a class="navbar-brand" href="#" style="padding-left: 10px; padding-right: 10px;">A17080</a>
+          <a class="navbar-brand" href="home.php" style="padding-left: 10px; padding-right: 10px; background:#ffe484; color:red; font-family: Arial, Helvetica, sans-serif; font-weight: bold; border-radius: 3px;">BABYSHOP</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
@@ -52,7 +52,7 @@
             {% else %}
             <!-- Nếu chưa đăng nhập thì hiển thị nút Đăng nhập -->
             <a class="nav-link" href="login.php">Đăng nhập</a>
-            <a class="nav-link" href="login.php">Đăng ký</a>
+            <a class="nav-link" href="#">Đăng ký</a>
             {% endif %}
 
               </div>
