--- a/templates/frontend/pages/home.html.twig
+++ b/templates/frontend/pages/home.html.twig
@@ -19,8 +19,11 @@ Bảng tin
 
     <!-- Slider -->
     <style media="screen">
-      *{
-        font-family: 'Times New Roman', Times, serif;
+      .showcase{
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      }
+      .lead{
+        text-align: justify;
       }
       #menubar{
         margin: 0px;
@@ -75,9 +78,6 @@ Bảng tin
       </div>
     </div>
         <!-- Slider END -->
-  
-                    
-        
     
         <!-- Image Showcases -->
         <section class="showcase">
